--- a/_posts/2020-7-11-ML-Note1.md
+++ b/_posts/2020-7-11-ML-Note1.md
@@ -15,13 +15,13 @@ tags:
 
 > ML Learning Note-1
 >
-> The basic of Linear Model
+> The basis of Linear Model
 
 ## Overview
 
-| Section               | Name                          | Expression                                               |
+| Section               | Techique                      | Expression                                               |
 | --------------------- | ----------------------------- | -------------------------------------------------------- |
-| Model Representation  | Linear Regression Model (LRM) | $$h(x)=\theta_0+\sum_{i=1}^n\theta_ix_i$$                |
+| Hypothesis Function   | Linear Regression Model (LRM) | $$h(x)=\theta_0+\sum_{i=1}^n\theta_ix_i$$                |
 | Cost Function         | Mean Square Error (MSE)       | $$J(\theta)=\frac1{2m}\sum_{j=1}^m(h(x^{(j)})-y^{(j)})$$ |
 | Optimization Method 1 | Batch Gradient Descent (BGD)  |                                                          |
 | Optimization Method 2 | Normal Equation (NE)          |                                                          |
@@ -161,6 +161,8 @@ $$
 \theta:=\theta-\alpha\frac{\partial}{\partial\theta}J(\theta)
 $$
 
+![](https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1594554318527&di=55ad5214be460adfade8878b101ffa60&imgtype=0&src=http%3A%2F%2F5b0988e595225.cdn.sohucs.com%2Fimages%2F20180510%2F5cb6d15295424e09803e90a794688968.jpeg)
+
 #### Tips | Tricks | Techniques
 
 ##### Feature Scaling
@@ -177,12 +179,12 @@ In `sklearn`, you can use `StandScaler`:
 from sklearn.preprocessing import StandardScaler
 from sklearn.datasets import load_boston
 
-X = load_boston().data  load features of dataset
-scaler = StandardScaler()  init scaler
+X = load_boston().data  # load features of dataset
+scaler = StandardScaler()  # init scaler
 
-scaler.fit(X)  scaler fit features
-X = scaler.transfrom(X)  scaler transform features
-X = scaler.fit_transform(X)  fit and transform
+scaler.fit(X)  # scaler fit features
+X = scaler.transfrom(X)  # scaler transform features
+X = scaler.fit_transform(X)  # fit and transform
 ```
 
 ##### Inspect the algorithms working
@@ -194,6 +196,8 @@ X = scaler.fit_transform(X)  fit and transform
 * If $$\alpha$$ is too small: slow convergence :snail:
 * If $$\alpha$$ is too big: the cost function may not decrease on every iterations;may not converge :sweat:
 * so you need to choose a proper $$\alpha$$ in order to make it fast convergence
+
+![](https://ss3.bdstatic.com/70cFv8Sh_Q1YnxGkpoWK1HF6hhy/it/u=3478690610,4135378283&fm=26&gp=0.jpg)
 
 ### Normal Equation
 
@@ -241,6 +245,13 @@ X^T(X\theta-y)=0\\
 \theta=(X^TX)^{-1}X^Ty
 $$
 
+result:
+$$
+\frac{\partial}{\partial\theta}J(\theta)=\frac1mX^T(X\theta-y)=\frac1mX^T(h(X)-y)\\
+\theta=(X^TX)^{-1}X^Ty
+$$
+
+
 #### Issue: non-invertible
 
 you see there is a matrix invert in the formula, but not all of the matrix has its own invert.
@@ -282,6 +293,12 @@ from numpy import matrix
 def norm_eq_method(X: matrix, y: vector) -> vector:
     return pinv(X.T@X)@X.T@y
 ```
+
+
+
+
+
+
 
 ## Practise with Boston Dataset
 
