--- a/_posts/2020-7-12-ML-Note2.md
+++ b/_posts/2020-7-12-ML-Note2.md
@@ -19,7 +19,7 @@ tags:
 
 ## Overview
 
-Logistic Regression Model is a Classification ML Techique which use regression method to solve the Classification Problem. Logistic Regression Model is a kind of Generalized Linear Model.
+Logistic Regression Model is a Classification ML Technique which use regression method to solve the Classification Problem. Logistic Regression Model is a kind of Generalized Linear Model.
 
 ### Generalized Linear Model
 
@@ -27,16 +27,16 @@ $$
 h(x)=g(x^T\theta)
 $$
 
-where function $$g(z)$$ is the generalized function which provide non-linear fitting ablity to the model.
+where function $$g(z)$$ is the generalized function which provide non-linear fitting ability to the model.
 
 when $$g(z) = sigmoid(z) = \frac1{1+e^{-z}}$$, the current model will be `Logistic Regression Model`.
 
-| Section               | Techique                                        | Expression                                                                                    |
-| --------------------- | ----------------------------------------------- | --------------------------------------------------------------------------------------------- |
-| Hypothesis Function   | Logistic Regression Classification Model (LRCM) | $$h(x)=sigmoid(x^T\theta)$$                                                                  |
-| Cost Function         | Maximum Likelihood Estimate (MLE)               | $$J(\theta)=-\frac1{m}\sum\_{j=1}^m[y^{(j)}\log h(x^{(j)})+(1-y^{(j)})\log h(1-x^{(j)})]$$ |
-| Optimization Method 1 | Batch Gradient Descent (BGD)                    |                                                                                               |
-| Optimization Method 2 | Normal Equation (NE)                            |                                                                                               |
+| Section               | Technique                                       | Expression                                                   |
+| --------------------- | ----------------------------------------------- | ------------------------------------------------------------ |
+| Hypothesis Function   | Logistic Regression Classification Model (LRCM) | $$h(x)=sigmoid(x^T\theta)$$                                  |
+| Cost Function         | Maximum Likelihood Estimate (MLE)               | $$J(\theta)=-\frac1{m}\sum_{j=1}^m[y^{(j)}\log h(x^{(j)})+(1-y^{(j)})\log h(1-x^{(j)})]$$ |
+| Optimization Method 1 | Batch Gradient Descent (BGD)                    |                                                              |
+| Optimization Method 2 | Normal Equation (NE)                            |                                                              |
 
 ## Notation
 
@@ -73,12 +73,12 @@ the graph of `sigmoid function`:
 from the graph of function, we can learn the characteristic of the `sigmoid function`:
 
 $$
-sigmoid(t)\in(0,1)\
-\lim_{t\to-\infty}sigmoid(t)=0\
+sigmoid(t)\in(0,1)\\
+\lim_{t\to-\infty}sigmoid(t)=0\\
 \lim_{t\to\infty}sigmoid(t)=1
 $$
 
-### Interpretaion of Hypothesis output
+### Interpretation of Hypothesis output
 
 $$h(x)=$$ estimated probability $$y=1$$ on input $$x$$.
 
@@ -88,15 +88,15 @@ $$
 
 ## Cost Function
 
-We don't use `Mean Square Error` to mearsure the loss of output again, because it will lead to non-convex optimization problem which `Gradient Descent` can't solve the global optimized solution. 
+We don't use `Mean Square Error` to measure the loss of output again, because it will lead to non-convex optimization problem which `Gradient Descent` can't solve the global optimized solution. 
 
 As a consequence, we will use `Maximum Likelihood Estimate` to figure out the cost function.
 
 $$
 Cost(h(x),y)=
 \begin{cases}
-\-\log(h(x)),\qquad y=1\
-\-\log(1-h(x)),\space y=0\
+\log(h(x)),\qquad y=1\\
+\log(1-h(x)),\space y=0\\
 \end{cases}
 $$
 
@@ -105,7 +105,7 @@ Cost(h(x),y)=-y\log(h(x))-(1-y)\log(1-h(x))
 $$
 
 $$
-J(\theta)=-\frac1m\sum\_{j=1}^m[y^{(j)}\log h(x^{(j)})+(1-y^{(j)})\log h(1-x^{(j)})]
+J(\theta)=-\frac1m\sum_{j=1}^m[y^{(j)}\log h(x^{(j)})+(1-y^{(j)})\log h(1-x^{(j)})]
 $$
 
 $$
@@ -116,14 +116,14 @@ $$
 
 `def`
 $$
-ls(z)=-\log sigmoid(z)\
+ls(z)=-\log sigmoid(z)\\
 \Rightarrow \frac{\partial}{\partial z}ls(z)=\frac{-e^z}{1+e^{-z}}
 $$
 
 then we calculate the derivative term of cost function $$J(\theta)$$
 
 $$
-J(\theta)=\frac1m(y^Tls(X\theta)+(1-y)^Tls(I-X\theta))\
+J(\theta)=\frac1m(y^Tls(X\theta)+(1-y)^Tls(I-X\theta))\\
 \frac{\partial}{\partial \theta}J(\theta)=\frac1m\frac{\partial}{\partial \theta}(y^Tls(X\theta)+(1-y)^Tls(I-X\theta))
 $$
 
@@ -148,29 +148,29 @@ $$
 then we continue to simplify the expression:
 
 $$
-\frac{\partial}{\partial \theta}J(\theta)=\frac1mX^T(\frac1{1+e^{-X\theta}}-y)\
-=\frac1mX^T(sigmoid(X\theta)-y)\
+\frac{\partial}{\partial \theta}J(\theta)=\frac1mX^T(\frac1{1+e^{-X\theta}}-y)\\
+=\frac1mX^T(sigmoid(X\theta)-y)\\
 =\frac1mX^T(h(X)-y)
 $$
 
-here we surprisedly see that the final simplified expression is same as `Linear Regression`'s
+here we surprisingly see that the final simplified expression is same as `Linear Regression`'s
 
 ### Optimization Task Representation
 
-| Key        | Item                                                                       |
-| ---------- | -------------------------------------------------------------------------- |
-| Parameters | $$\theta$$                                                                |
-| Function   | $$-\frac1m(y^T\log sigmoid(X\theta)+(1-y)^T\log sigmoid(I-X\theta))$$ |
-| Goal       | $$\min\_{\theta} J(\theta)$$                                            |
+| Key        | Item                                                         |
+| ---------- | ------------------------------------------------------------ |
+| Parameters | $$\theta$$                                                   |
+| Function   | $$-\frac1m[y^T\log sigmoid(X\theta)+(1-y)^T\log sigmoid(I-X\theta)]$$ |
+| Goal       | $$\min_{\theta} J(\theta)$$                                  |
 
 $$
-\min\_{\theta} -\frac1m(y^T\log sigmoid(X\theta)+(1-y)^T\log sigmoid(I-X\theta))
+\min_{\theta} -\frac1m(y^T\log sigmoid(X\theta)+(1-y)^T\log sigmoid(I-X\theta))
 $$
 
 ### Gradient Descent Algorithms
 
 > this part is quite same as the `Linear Regression`
 
-## Practise with Breast-Cancer Dataset
+## Practice with Breast-Cancer Dataset
 
 <iframe src="https://nbviewer.jupyter.org/github/Algebra-FUN/ML-note/blob/master/code/2-LM.ipynb" width="100%" height="100%" frameborder="0">
