--- a/_posts/2020-7-12-ML-Note2.md
+++ b/_posts/2020-7-12-ML-Note2.md
@@ -45,10 +45,10 @@ when $$g(z) = sigmoid(z) = \frac1{1+e^{-z}}$$, the current model will be `Logist
 | $$n$$          | $$\mathbb N^+$$               | the number of features                                |
 | $$m$$          | $$\mathbb N^+$$               | the number of training samples                        |
 | $$x^{(i)}$$    | $$\mathbb R^n$$               | the features vector of the $$i^{th}$$ training sample |
-| $$x^{(i)}\_j$$ | $$\mathbb R$$                 | value of feature j in the $$i^{th}$$ training sample  |
-| $$y^{(i)}$$    | $${0,1}$$                      | the target value of the $$i^{th}$$ training sample    |
+| $$x^{(i)}_j$$ | $$\mathbb R$$                 | value of feature j in the $$i^{th}$$ training sample  |
+| $$y^{(i)}$$    | $$\{0,1\}$$                    | the target value of the $$i^{th}$$ training sample    |
 | $$\hat{x}$$   | $$\mathbb R^{n+1}$$           | $$[1\space  x]^T$$                                    |
-| $$y$$          | $${0,1}^m$$                    | the vector of all target values of training samples   |
+| $$y$$          | $$\{0,1\}^m$$                | the vector of all target values of training samples   |
 | $$\theta$$    | $$\mathbb R^{n+1}$$           | the vector of weights of model                        |
 | $$X$$          | $$\mathbb R^{m\times(n+1)}$$ | the matrix of all input values of training samples    |
 
