--- a/_posts/2020-7-14-ML-Note3.md
+++ b/_posts/2020-7-14-ML-Note3.md
@@ -192,9 +192,46 @@ If $$\lambda >0$$, this matrix $$(X^TX+\lambda
 
 `Prove`:
 
-```python
-pass
-```
+for $$\forall \eta \in \mathbb R^{n+1},\eta=\begin{bmatrix}\eta_0,\eta_1,...\eta_n\end{bmatrix}^T$$
+
+$$
+\eta^T(X^TX+\lambda\begin{bmatrix}0 \\& 1\\& & \ddots\\& & & 1\end{bmatrix})\eta
+$$
+
+$$
+=(X\eta)^T(X\eta)+\lambda\sum_{k=1}^n\eta_k^2\geq0
+$$
+
+when $$(X\eta)^T(X\eta)+\lambda\sum_{k=1}^n\eta_k^2=0$$,
+
+$$
+\Rightarrow
+\begin{cases}
+(X\eta)^T(X\eta)=0\Rightarrow X\eta=0\\
+\eta_k=0,\qquad k\in\{1,2,...,n\}
+\end{cases}
+$$
+
+as $$\eta_k=0,k\in\{1,2,...,n\}$$
+
+$$
+X\eta=\begin{bmatrix} 1 & {x^{(1)}}^T \\ 1 & {x^{(2)}}^T \\ \vdots & \vdots \\1 & {x^{(m)}}^T\end{bmatrix}\begin{bmatrix}\eta_0\\0\\\vdots\\0\end{bmatrix}=\begin{bmatrix}\eta_0\\\eta_0\\\vdots\\\eta_0\end{bmatrix}=0\\\Rightarrow \eta_0=0
+$$
+
+from what has been discussed above:
+
+$$
+\forall \eta \in \mathbb R^{n+1}\setminus{\vec0},\eta^T(X^TX+\lambda\begin{bmatrix}0 \\& 1\\& & \ddots\\& & & 1\end{bmatrix})\eta>0
+$$
+
+indicate that $$(X^TX+\lambda
+\begin{bmatrix}
+0 \\
+& 1\\
+& & \ddots\\
+& & & 1
+\end{bmatrix}
+)$$ is a`positive definite matrix` so that it is invertible.
 
 ### Regularized Logistic Regression
 
