--- a/_posts/2020-7-14-ML-Note3.md
+++ b/_posts/2020-7-14-ML-Note3.md
@@ -7,9 +7,8 @@ author:     Algebra-FUN
 header-img: img/tag-bg-o.jpg
 catalog: true
 tags:
-    - Octave
-    - IDE
-    - Jupyter
+    - ML
+    - Math
 ---
 
 # Regularization
